--- a/Cryptography-RSA/Cryptography-RSA.csproj
+++ b/Cryptography-RSA/Cryptography-RSA.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Number.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RsaKey.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
