--- a/Cryptography-RSA/Cryptography-RSA.csproj
+++ b/Cryptography-RSA/Cryptography-RSA.csproj
@@ -70,8 +70,10 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Number.cs" />
+    <Compile Include="PrivateKey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublicKey.cs" />
     <Compile Include="RsaKey.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
