--- a/Cryptography-RSA/Cryptography-RSA.csproj
+++ b/Cryptography-RSA/Cryptography-RSA.csproj
@@ -69,6 +69,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MillerRabin.cs" />
     <Compile Include="Number.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
