--- a/Cryptography-RSA-UnitTestProject/Cryptography-RSA-UnitTestProject.csproj
+++ b/Cryptography-RSA-UnitTestProject/Cryptography-RSA-UnitTestProject.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ControllerUnitTest.cs" />
     <Compile Include="MillerRabinUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
